--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,19 +2,16 @@
 {
 	"name": "Node.js (latest LTS) & TypeScript",
 	"dockerFile": "Dockerfile",
-
 	// Uncomment the next line if you want to publish any ports.
 	// "appPort": [],
-
 	// Uncomment the next line if you want to add in default container specific settings.json values
 	// "settings":  { "workbench.colorTheme": "Quiet Light" },
-
 	// Uncomment the next line to run commands after the container is created.
-	"postCreateCommand": "npm install",
-
+	// "postCreateCommand": "npm install",
 	"extensions": [
 		"Angular.ng-template",
 		"msjsdiag.debugger-for-chrome",
-		"ms-vscode.vscode-typescript-tslint-plugin"
+		"ms-vscode.vscode-typescript-tslint-plugin",
+		"hbenl.vscode-firefox-debug"
 	]
 }
