--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -32,6 +32,7 @@ RUN apt-get autoremove -y \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/*
 ENV DEBIAN_FRONTEND=dialog
-
+# Expose port 4000
+EXPOSE 4000
 # Set the default shell to bash instead of sh
 ENV SHELL /bin/bash
