--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,9 @@
 // See https://aka.ms/vscode-remote/devcontainer.json for format details.
 {
-	"name": "Node.js (latest LTS) & TypeScript",
+	"name": "Angular & Node (latest LTS)",
 	"dockerFile": "Dockerfile",
 	// Uncomment the next line if you want to publish any ports.
-	"appPort": [4000],
+	"appPort": [4000, 4200],
 	// Uncomment the next line if you want to add in default container specific settings.json values
 	// "settings":  { "workbench.colorTheme": "Quiet Light" },
 	// Uncomment the next line to run commands after the container is created.
